--- a/0_MarkDown4README_md.ipynb
+++ b/0_MarkDown4README_md.ipynb
@@ -38,7 +38,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "#**how to use <font color = 'red'> markdown </font> language**\n",
+        "#**How to use <font color = 'red'> Markdown </font> Language**\n",
         "\n",
         "**how to use markdown language**\n",
         "- for more syntax of language, [click here.](https://www.markdownguide.org/basic-syntax/)"
@@ -80,11 +80,23 @@
     {
       "cell_type": "markdown",
       "source": [
-        "집에서 해보기"
+        "### **5. Class Materials**\n",
+        "| # | Sessions | Keywords |\n",
+        "|:--:|:--:|:--:|\n",
+        "| 1 | Markdown Language 👪  | [syntax](https://github.com/ms624atyale/NLP_2024/blob/main/0_MarkDown4README_md.ipynb)|"
       ],
       "metadata": {
         "id": "EIBHGIDEC8jV"
       }
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "409o3kwixLPS"
+      },
+      "execution_count": null,
+      "outputs": []
     }
   ]
 }
