Colab을 통해 생성됨

--- a/2_FiveTypesofData.ipynb
+++ b/2_FiveTypesofData.ipynb
@@ -34,7 +34,7 @@
       "metadata": {
         "id": "fdRG_DQA75Bf"
       },
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -45,7 +45,7 @@
       "metadata": {
         "id": "oOWiKpFJ8yyk"
       },
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -56,7 +56,21 @@
       "metadata": {
         "id": "sHDpaavWBNy8"
       },
-      "execution_count": 3,
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "a = 24\n",
+        "b = 'string'\n",
+        "c = 'sequence'\n",
+        "d = ['string','sequence']"
+      ],
+      "metadata": {
+        "id": "fZGQKm3ar3dA"
+      },
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -171,7 +185,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -220,7 +234,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -267,7 +281,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -327,7 +341,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -361,7 +375,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 11,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -388,7 +402,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 12,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -525,7 +539,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 14,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -598,7 +612,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 15,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -657,6 +671,18 @@
     {
       "cell_type": "code",
       "source": [
+        "k = {'Mercury': '수성','Venus' : '금성', 'Earth' : '지구', 'Mars' : '화성', 'Jupiter':'목성','Saturn':'토성','Uranus':'천황성','Nepture':'혜왕성'}\n",
+        "m = {'Mercury 수성':1, 'Venus 금성':2, 'Earth 지구':3, 'Mars 화성':4, 'Jupiter 목성':5, 'Saturn 토성':6, 'Uranus 천황성':7, 'Nepture 혜왕성':8}"
+      ],
+      "metadata": {
+        "id": "wAv0TFyjvx-y"
+      },
+      "execution_count": 4,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
         "#@markdown 📌 Print the value of key 'a' ('a' as string data)\n",
         "dict = {'a':1, 'b':2, 'c':3}\n",
         "print (dict)\n",
@@ -677,6 +703,65 @@
           "text": [
             "{'a': 1, 'b': 2, 'c': 3}\n",
             "1\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "dict = {'a':1, 'b':2, 'c':3}\n",
+        "print(dict)\n",
+        "print(dict['a'])"
+      ],
+      "metadata": {
+        "id": "lzRXH8VHvtPN",
+        "outputId": "10600942-d139-46d2-f4e2-3dbdccec439e",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 3,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "{'a': 1, 'b': 2, 'c': 3}\n",
+            "1\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "dict = {'a':1, 'b':2, 'c':3}\n",
+        "dict['a'] = 7\n",
+        "print(dict)\n",
+        "\n",
+        "dict_data = {'c':10, 'b':20, 'a':30}\n",
+        "print(dict_data)\n",
+        "dict_data['a'] = 300\n",
+        "print(dict_data)\n",
+        "\n"
+      ],
+      "metadata": {
+        "id": "k3Ml-l-5v5cL",
+        "outputId": "2bfe71fa-7812-4395-d9ec-ab7b311c7db3",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 6,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "{'a': 7, 'b': 2, 'c': 3}\n",
+            "{'c': 10, 'b': 20, 'a': 30}\n",
+            "{'c': 10, 'b': 20, 'a': 300}\n"
           ]
         }
       ]
