Colab을 통해 생성됨

--- a/4_1_IfStatement.ipynb
+++ b/4_1_IfStatement.ipynb
@@ -62,6 +62,36 @@
     {
       "cell_type": "code",
       "source": [
+        "x = 90\n",
+        "y = 95\n",
+        "\n",
+        "if x>y:\n",
+        "  print('x is greater than y')\n",
+        "\n",
+        "else:\n",
+        "    print('x is smallerthan or equal to y')"
+      ],
+      "metadata": {
+        "id": "DPNmnH0qwg6D",
+        "outputId": "66f37dac-d205-4d5f-eeb3-c8d49a8d34f9",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 4,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "x is smallerthan or equal to y\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
         "x=0\n",
         "y=0\n",
         "\n",
@@ -76,6 +106,36 @@
       },
       "execution_count": null,
       "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "x = 1\n",
+        "y = 1\n",
+        "\n",
+        "if x > y:\n",
+        "  print('x is greater than y')\n",
+        "\n",
+        "else:\n",
+        "  print('x is smaller than or equal to y')"
+      ],
+      "metadata": {
+        "id": "o5YVipR6w2BB",
+        "outputId": "6c40c3ca-def0-42a2-be2f-c40eef5aa448",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 5,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "x is smaller than or equal to y\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "code",
@@ -99,6 +159,36 @@
     {
       "cell_type": "code",
       "source": [
+        "x = 3848949\n",
+        "y = 1234567\n",
+        "\n",
+        "if x>y:\n",
+        "  print('x is greater than y')\n",
+        "\n",
+        "else:\n",
+        "  print('x is smaller than or equal to y')"
+      ],
+      "metadata": {
+        "id": "cH3ePMg0xHTM",
+        "outputId": "43b5a093-236d-43bb-e50a-1c880ca1bc76",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 6,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "x is greater than y\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
         "listdata = ['a', 'b', 'c']\n",
         "if 'a' in listdata:\n",
         "  print ('a가 listdata 안에 있습니다.')\n",
@@ -118,6 +208,33 @@
       "metadata": {
         "id": "4kbHc0C8Cn40"
       }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "listdata = ['a','b','c']\n",
+        "if 'a' in listdata:\n",
+        "  print('a가 listdata 안에 있습니다!')\n",
+        "  print(listdata)"
+      ],
+      "metadata": {
+        "id": "PNcX47WhwJww",
+        "outputId": "cc013271-b42b-4ad5-86d8-d2c03e3e354d",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 1,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "a가 listdata 안에 있습니다!\n",
+            "['a', 'b', 'c']\n"
+          ]
+        }
+      ]
     }
   ]
 }
