--- a/0_MarkDown4README_md.ipynb
+++ b/0_MarkDown4README_md.ipynb
@@ -50,6 +50,44 @@
     {
       "cell_type": "markdown",
       "source": [
+        "# **✂️✏️📌How to Use <font color = 'red'> Markdown </font> Language**\n",
+        "* ## For more syntax of markdown langauge,[Click here!](https://www.markdownguide.org/basic-syntax/)"
+      ],
+      "metadata": {
+        "id": "gll_Pua5JDh-"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# **Python Language**\n",
+        "\n",
+        "## **Learning Python** using **Colab** ([Visit Colab homepage](https://colab.research.google.com/?utm_source=scs-index)) and **Github** ([Visit Colab homepage](https://github.com/))\n",
+        "### **1. Sign up github** ([Visit a tutorial on Youtube](https://www.youtube.com/watch?v=c-NikCpec7U))\n",
+        "\n",
+        "### **2. Sign up Google Colaboratory** (aka. Colab) ([Visit atutorial on Youtube](https://www.youtube.com/watch?v=2X_EU18OeYM))\n",
+        "\n",
+        "### **3. Useful References**\n",
+        "- ##### Exercise 200 파이썬200제 by.장삼용. 정보문화사 2017\n",
+        "- [Jump to Python](https://wikidocs.net/book/1)\n",
+        "- [wikidocs for nltk](https://wikidocs.net/21667)\n",
+        "\n",
+        "### **4. Markdown Language**\n",
+        "- [Emoji](https://gist.github.com/rxaviers/7360908)\n",
+        "- [Markdown syntax](https://www.markdownguide.org/basic-syntax/)\n",
+        "\n",
+        "### **5. Class Materials**\n",
+        "| # | Sessions | Keywords |\n",
+        "|:-:|:-:|:-:|\n",
+        "|1|Markdown Language👪|[syntax](https://github.com/ms624atyale/NLP_2024/blob/main/0_MarkDown4README_md.ipynb)|"
+      ],
+      "metadata": {
+        "id": "q1-V7VwxNzB8"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
         "# NLP_2024\n",
         "\n",
         "# 🐹🍦 **Python Language**\n",
@@ -88,15 +126,6 @@
       "metadata": {
         "id": "EIBHGIDEC8jV"
       }
-    },
-    {
-      "cell_type": "code",
-      "source": [],
-      "metadata": {
-        "id": "409o3kwixLPS"
-      },
-      "execution_count": null,
-      "outputs": []
     }
   ]
 }
