--- a/1_CodeCells_Basic.ipynb
+++ b/1_CodeCells_Basic.ipynb
@@ -59,7 +59,7 @@
       "metadata": {
         "id": "BbbTlIXfxD02"
       },
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -87,11 +87,24 @@
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "a = 1"
+      ],
       "metadata": {
         "id": "ZM8uwzqN0U7C"
       },
-      "execution_count": null,
+      "execution_count": 2,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "b = -1"
+      ],
+      "metadata": {
+        "id": "mLly8sKhiwfp"
+      },
+      "execution_count": 3,
       "outputs": []
     },
     {
@@ -101,18 +114,18 @@
       ],
       "metadata": {
         "id": "dh9z6Tc00Bdc",
-        "outputId": "239658b9-21cb-4593-937a-136326e097f1",
+        "outputId": "bbebc459-0707-43a8-d55c-720331459f06",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 3,
+      "execution_count": 4,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "3\n"
+            "0\n"
           ]
         }
       ]
@@ -125,7 +138,7 @@
       "metadata": {
         "id": "R0kCWojSz8S6"
       },
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -202,6 +215,30 @@
     {
       "cell_type": "code",
       "source": [
+        "c = 2\n",
+        "print(c)"
+      ],
+      "metadata": {
+        "id": "wx3-juaVi1ly",
+        "outputId": "2e43a846-fb13-46b5-b678-20ed898d4ecd",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 5,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "2\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
         "#@markdown 🐣 Use a print function and a Boolean operator -\n",
         "print(c-b)"
       ],
@@ -219,6 +256,29 @@
           "name": "stdout",
           "text": [
             "1\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "print(a-b)"
+      ],
+      "metadata": {
+        "id": "f1dqScroi5Y2",
+        "outputId": "e61bd314-5e43-4f42-ed86-bb9d9a0e5454",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 6,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "2\n"
           ]
         }
       ]
