Colab을 통해 생성됨

--- a/2_FiveTypesofData.ipynb
+++ b/2_FiveTypesofData.ipynb
@@ -155,8 +155,7 @@
         "outputId": "0907c167-812d-467b-f1f5-3b46446047ef",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        },
-        "cellView": "form"
+        }
       },
       "execution_count": null,
       "outputs": [
@@ -178,7 +177,6 @@
         "print(a)"
       ],
       "metadata": {
-        "cellView": "form",
         "id": "UguWFd7CD0vH",
         "outputId": "60e21e69-beec-4864-b80d-80d242f58dab",
         "colab": {
@@ -677,7 +675,7 @@
       "metadata": {
         "id": "wAv0TFyjvx-y"
       },
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -711,24 +709,25 @@
       "cell_type": "code",
       "source": [
         "dict = {'a':1, 'b':2, 'c':3}\n",
+        "dict['a'] = 7\n",
         "print(dict)\n",
         "print(dict['a'])"
       ],
       "metadata": {
         "id": "lzRXH8VHvtPN",
-        "outputId": "10600942-d139-46d2-f4e2-3dbdccec439e",
+        "outputId": "f7ba4a22-601c-4661-a13e-2ca430ada53f",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 3,
+      "execution_count": 6,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "{'a': 1, 'b': 2, 'c': 3}\n",
-            "1\n"
+            "{'a': 7, 'b': 2, 'c': 3}\n",
+            "7\n"
           ]
         }
       ]
@@ -753,7 +752,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
