Colab을 통해 생성됨

--- a/2_FiveTypesofData.ipynb
+++ b/2_FiveTypesofData.ipynb
@@ -368,12 +368,12 @@
       ],
       "metadata": {
         "id": "FqAo7mMFEfjd",
-        "outputId": "d02f09d6-1d9f-4de5-ba69-9accad03b724",
+        "outputId": "a7246e3b-c944-44e0-c1a0-1f81f6844ce5",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": null,
+      "execution_count": 7,
       "outputs": [
         {
           "output_type": "stream",
@@ -384,6 +384,29 @@
             "Ken\n",
             "Jen\n",
             "Emma\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "print(a_b + c_d)"
+      ],
+      "metadata": {
+        "id": "sFf6wxvsqG4y",
+        "outputId": "ef86dada-baec-40f9-91ee-dde48b951d04",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 8,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "KenJen\n"
           ]
         }
       ]
@@ -502,12 +525,12 @@
       ],
       "metadata": {
         "id": "z4DHh7t_OCBS",
-        "outputId": "fca3fb66-edf9-4c42-9d9e-2625f0071acc",
+        "outputId": "20d0fed6-9cc7-4445-cd83-d3746211d27a",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": null,
+      "execution_count": 10,
       "outputs": [
         {
           "output_type": "stream",
@@ -516,6 +539,30 @@
             "['Mercury', 'Venus', 'Earth', 'Mars', 'Jupiter', 'Saturn', 'Uranus', 'Neptune']\n",
             "['수성', '금성', '지구', '화성', '목성', '토성', '천황성', '혜왕성']\n",
             "[1, 2, 3, 4, 5, 6, 7, 8]\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "d[0] = \"hello\"\n",
+        "print(d)"
+      ],
+      "metadata": {
+        "id": "j0FuTOYpqWhN",
+        "outputId": "a435816d-5856-4c2b-aab9-b13ed4bfd477",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 14,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "['hello', 'Venus', 'Earth', 'Mars', 'Jupiter', 'Saturn', 'Uranus', 'Neptune']\n"
           ]
         }
       ]
@@ -575,12 +622,12 @@
       ],
       "metadata": {
         "id": "yJ4OL86PVFoq",
-        "outputId": "f3399019-6973-4e0c-8baf-469704084300",
+        "outputId": "b4255590-3617-4269-a744-86e136650529",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": null,
+      "execution_count": 15,
       "outputs": [
         {
           "output_type": "stream",
@@ -590,6 +637,36 @@
             "('수성', '금성', '지구', '화성', '목성', '토성', '천황성', '혜왕성')\n",
             "(1, 2, 3, 4, 5, 6, 7, 8)\n"
           ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "g[0]"
+      ],
+      "metadata": {
+        "id": "w08i5j3kqstq",
+        "outputId": "24a8b7a3-810f-4bff-dbb6-00a96fab8ae7",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 35
+        }
+      },
+      "execution_count": 19,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "'Mercury'"
+            ],
+            "application/vnd.google.colaboratory.intrinsic+json": {
+              "type": "string"
+            }
+          },
+          "metadata": {},
+          "execution_count": 19
         }
       ]
     },
@@ -691,9 +768,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "j6w4opO3bjnK",
-        "outputId": "8cbdeff7-1210-48b7-ec56-2b0818588118"
+        "outputId": "45d36abe-25b2-4d29-e838-00d1728c8313"
       },
-      "execution_count": null,
+      "execution_count": 20,
       "outputs": [
         {
           "output_type": "stream",
@@ -701,6 +778,29 @@
           "text": [
             "{'a': 1, 'b': 2, 'c': 3}\n",
             "1\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "print(dict['a']+dict['b'])"
+      ],
+      "metadata": {
+        "id": "OQpIp8kcrDhL",
+        "outputId": "d170352a-6153-4142-910e-43a9dd066cda",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 24,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "3\n"
           ]
         }
       ]
@@ -720,7 +820,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
