Colab을 통해 생성됨

--- a/3_Indexing_Slicing.ipynb
+++ b/3_Indexing_Slicing.ipynb
@@ -164,7 +164,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -212,7 +212,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -250,7 +250,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -278,7 +278,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -443,7 +443,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -483,7 +483,7 @@
           "height": 221
         }
       },
-      "execution_count": 10,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "error",
@@ -514,12 +514,12 @@
       ],
       "metadata": {
         "id": "gsv43biRGwT1",
-        "outputId": "572ea240-9ae5-41c9-b1a7-676e68511762",
+        "outputId": "a91073f7-1fe8-418b-8415-00bcc50bf7a2",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": null,
+      "execution_count": 1,
       "outputs": [
         {
           "output_type": "stream",
@@ -532,6 +532,48 @@
             "y!!\n",
             "Time is money!!\n",
             "Tm smny!\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "| str_data | M | y |   | N | a | m | e |   | i | s |  | l | j | h |\n",
+        "|:-:|:-:|:-:|:-:|:-:|:-:|:-:|:-:|:-:|:-:|:-:|:-:|:-:|:-:|:-:|\n",
+        "|Forward Indexing| 0 | 1 | 2 | 3 | 4 | 5 | 6 | 7 | 8 | 9 | 10 | 11 | 12 | 13 |\n",
+        "|Backward Indexing | -14 | -13 | -12 | -11 | -10 | -9 | -8 | -7 | -6 | -5 | -4 | -3 | -2 | -1|"
+      ],
+      "metadata": {
+        "id": "xp5Hca2nvtKd"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "str_data = 'My Name Is lgh'\n",
+        "print(str_data[1:5])\n",
+        "print(str_data[:5])\n",
+        "print(str_data[5:])\n",
+        "print(str_data[::3])"
+      ],
+      "metadata": {
+        "id": "PZ3MgzoXvIGf",
+        "outputId": "af58b048-cc2c-4c5a-80ed-cd00b35ed579",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 10,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "y Na\n",
+            "My Na\n",
+            "me Is lgh\n",
+            "MNesg\n"
           ]
         }
       ]
@@ -563,7 +605,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 11,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -589,7 +631,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 12,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -619,11 +661,22 @@
         "print (strdata1 + strdata2)"
       ],
       "metadata": {
-        "cellView": "form",
-        "id": "rknO5rNWqMN_"
+        "id": "rknO5rNWqMN_",
+        "outputId": "a579b751-a6e3-4bbe-edaf-1064fd58f9ba",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 5,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "I love Python\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "code",
@@ -634,7 +687,6 @@
         "print (strdata1 + strdata2)"
       ],
       "metadata": {
-        "cellView": "form",
         "id": "KFsPImzMrW05"
       },
       "execution_count": null,
@@ -649,7 +701,6 @@
         "print (strdata1 + strdata0 + strdata2)"
       ],
       "metadata": {
-        "cellView": "form",
         "id": "guhCjTVJrmyh"
       },
       "execution_count": null,
@@ -691,7 +742,7 @@
       "metadata": {
         "id": "fvOfcWA9uOfJ"
       },
-      "execution_count": 13,
+      "execution_count": null,
       "outputs": []
     },
     {
