Colab을 통해 생성됨

--- a/4_1_IfStatement.ipynb
+++ b/4_1_IfStatement.ipynb
@@ -62,18 +62,48 @@
     {
       "cell_type": "code",
       "source": [
-        "x = 90\n",
+        "x = -100\n",
         "y = 95\n",
         "\n",
         "if x>y:\n",
         "  print('x is greater than y')\n",
         "\n",
         "else:\n",
-        "    print('x is smallerthan or equal to y')"
+        "    print('x is smaller than or equal to y')"
       ],
       "metadata": {
         "id": "DPNmnH0qwg6D",
-        "outputId": "66f37dac-d205-4d5f-eeb3-c8d49a8d34f9",
+        "outputId": "15edce6d-48de-4c85-b684-1fc95a714fb3",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 3,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "x is smaller than or equal to y\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "x = 95\n",
+        "y = 95\n",
+        "\n",
+        "if x>y:\n",
+        "  print('x is greater than y')\n",
+        "\n",
+        "else:\n",
+        "    print('x is smaller than or equal to y')"
+      ],
+      "metadata": {
+        "id": "hrWZ308U1KS-",
+        "outputId": "a20d0f8f-16ce-47f6-90fd-3da386a789f3",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -84,7 +114,7 @@
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "x is smallerthan or equal to y\n"
+            "x is smaller than or equal to y\n"
           ]
         }
       ]
@@ -102,10 +132,22 @@
         "  print('x is smaller than or equal to y')"
       ],
       "metadata": {
-        "id": "0EEhWrh3nNih"
+        "id": "0EEhWrh3nNih",
+        "outputId": "37309c53-3c06-4203-c8fa-fe017c404e01",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 5,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "x is smaller than or equal to y\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "code",
@@ -126,7 +168,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -175,7 +217,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -190,15 +232,29 @@
       "cell_type": "code",
       "source": [
         "listdata = ['a', 'b', 'c']\n",
+        "\n",
         "if 'a' in listdata:\n",
         "  print ('a가 listdata 안에 있습니다.')\n",
         "  print(listdata)\n"
       ],
       "metadata": {
-        "id": "iS8myQoGAY1U"
+        "id": "iS8myQoGAY1U",
+        "outputId": "47e4771d-3599-4a44-d2d8-ec00db5fec9e",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 6,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "a가 listdata 안에 있습니다.\n",
+            "['a', 'b', 'c']\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -224,7 +280,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
