Colab을 통해 생성됨

--- a/4_2_ForStatement.ipynb
+++ b/4_2_ForStatement.ipynb
@@ -82,6 +82,70 @@
     {
       "cell_type": "code",
       "source": [
+        "numbers = (1,2,3,4,5,6,7,8,9)\n",
+        "\n",
+        "for i in numbers:\n",
+        "  print(i)"
+      ],
+      "metadata": {
+        "id": "T3vrzbB-4gD5",
+        "outputId": "a442bb51-af8c-4c00-99a0-88d641ffb187",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 3,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "1\n",
+            "2\n",
+            "3\n",
+            "4\n",
+            "5\n",
+            "6\n",
+            "7\n",
+            "8\n",
+            "9\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "list = [1,2,3,4,5]\n",
+        "\n",
+        "for x in list:\n",
+        "  print(x)"
+      ],
+      "metadata": {
+        "id": "f_46U7uh54_D",
+        "outputId": "5d0a52e4-03f6-4360-9788-1fcec92318e5",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 6,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "1\n",
+            "2\n",
+            "3\n",
+            "4\n",
+            "5\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
         "#@markdown Similar exercise for a For Statement.\n",
         "\n",
         "scope = [1,2,3,4,5]\n",
@@ -153,6 +217,67 @@
       "metadata": {
         "id": "byuI28oANeha"
       }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "import keyword\n",
+        "keyword.kwlist"
+      ],
+      "metadata": {
+        "id": "gRsADcHH7Ar6",
+        "outputId": "683685a3-58e6-4467-d52a-aa0b23fb795d",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 8,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "['False',\n",
+              " 'None',\n",
+              " 'True',\n",
+              " 'and',\n",
+              " 'as',\n",
+              " 'assert',\n",
+              " 'async',\n",
+              " 'await',\n",
+              " 'break',\n",
+              " 'class',\n",
+              " 'continue',\n",
+              " 'def',\n",
+              " 'del',\n",
+              " 'elif',\n",
+              " 'else',\n",
+              " 'except',\n",
+              " 'finally',\n",
+              " 'for',\n",
+              " 'from',\n",
+              " 'global',\n",
+              " 'if',\n",
+              " 'import',\n",
+              " 'in',\n",
+              " 'is',\n",
+              " 'lambda',\n",
+              " 'nonlocal',\n",
+              " 'not',\n",
+              " 'or',\n",
+              " 'pass',\n",
+              " 'raise',\n",
+              " 'return',\n",
+              " 'try',\n",
+              " 'while',\n",
+              " 'with',\n",
+              " 'yield']"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 8
+        }
+      ]
     },
     {
       "cell_type": "code",
@@ -250,6 +375,34 @@
     {
       "cell_type": "code",
       "source": [
+        "clas = ['Sam','Emily','Todd']\n",
+        "\n",
+        "for i in clas:\n",
+        "  print(i)\n"
+      ],
+      "metadata": {
+        "id": "EUPVYL5n7OC4",
+        "outputId": "ac68d617-11e6-4236-893b-41341573e360",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 10,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Sam\n",
+            "Emily\n",
+            "Todd\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
         "#@markdown <font color='brown'>**💊 Fix this!**\n",
         "\n",
         "name = ['Sam', 'Emily', 'Todd']\n",
@@ -325,6 +478,53 @@
           },
           "metadata": {},
           "execution_count": 6
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# @title\n",
+        "for i in range(10):\n",
+        "  print(i)\n",
+        "\n",
+        "type(i)"
+      ],
+      "metadata": {
+        "collapsed": true,
+        "id": "Mo0jXCXL8dOa",
+        "outputId": "da5ade00-ff34-439d-92c9-f0235e22b9d2",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 18,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "0\n",
+            "1\n",
+            "2\n",
+            "3\n",
+            "4\n",
+            "5\n",
+            "6\n",
+            "7\n",
+            "8\n",
+            "9\n"
+          ]
+        },
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "int"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 18
         }
       ]
     },
@@ -459,6 +659,37 @@
     {
       "cell_type": "code",
       "source": [
+        "list_fruit = [\"apple\", \"banana\", \"grape\", \"strawberry\", \"pear\", \"mango\"]\n",
+        "\n",
+        "for i in list_fruit:\n",
+        "  print(i)"
+      ],
+      "metadata": {
+        "id": "Ux7dogIN-4FQ",
+        "outputId": "c87312e0-f943-4916-f1b2-29a5a6b9bc43",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 19,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "apple\n",
+            "banana\n",
+            "grape\n",
+            "strawberry\n",
+            "pear\n",
+            "mango\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
         "string ='abcde'\n",
         "\n",
         "for c in string:\n",
@@ -489,6 +720,38 @@
     {
       "cell_type": "code",
       "source": [
+        "string ='dgregeg'\n",
+        "\n",
+        "for c in string:\n",
+        "  print(c)"
+      ],
+      "metadata": {
+        "id": "_dISSe4e-67c",
+        "outputId": "f00de8e0-094a-4012-c1c6-55be747de8ba",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 22,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "d\n",
+            "g\n",
+            "r\n",
+            "e\n",
+            "g\n",
+            "e\n",
+            "g\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
         "list_int = [1,2,3,4,5]\n",
         "\n",
         "for c in list_int:\n",
@@ -496,12 +759,12 @@
       ],
       "metadata": {
         "id": "OkVfgB8RQNTW",
-        "outputId": "79c79224-5e6d-4d28-b910-84fd76f3931a",
+        "outputId": "7f449fca-59fb-4502-9781-58030a8cb93f",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": null,
+      "execution_count": 23,
       "outputs": [
         {
           "output_type": "stream",
@@ -511,9 +774,7 @@
             "2\n",
             "3\n",
             "4\n",
-            "5\n",
-            "1\n",
-            "[0]\n"
+            "5\n"
           ]
         }
       ]
@@ -547,6 +808,31 @@
     {
       "cell_type": "code",
       "source": [
+        "print(list_int[0])\n",
+        "print([0])"
+      ],
+      "metadata": {
+        "id": "X7cbyGfk_39z",
+        "outputId": "f1cf8334-073e-4510-da94-87fed0dc0e62",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 24,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "1\n",
+            "[0]\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
         "dict1 = {'a':97, 'b':98, 'c':99}\n",
         "\n",
         "for i in dict1:\n",
@@ -560,6 +846,34 @@
         }
       },
       "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "a\n",
+            "b\n",
+            "c\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "dict1 = {'a':97, 'b':98, 'c':99}\n",
+        "\n",
+        "for i in dict1:\n",
+        "  print(i)"
+      ],
+      "metadata": {
+        "id": "EsgPilLDAS5E",
+        "outputId": "c1727087-aea7-4fbd-c837-955ca1646309",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 25,
       "outputs": [
         {
           "output_type": "stream",
@@ -603,6 +917,61 @@
     {
       "cell_type": "code",
       "source": [
+        "dict2 = {'a':100, 'b':200, 'c':300}\n",
+        "\n",
+        "for i in dict2:\n",
+        "  print(i)"
+      ],
+      "metadata": {
+        "id": "pOrpsxAyArvL",
+        "outputId": "0129fd68-1276-48fb-f0da-8cf4b883ee94",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 26,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "a\n",
+            "b\n",
+            "c\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "print(dict2['a'])\n",
+        "print(dict2['b'])\n",
+        "print(dict2['c'])"
+      ],
+      "metadata": {
+        "id": "vqkL1GhcBOnW",
+        "outputId": "a4ae067d-5331-4bb8-babf-7681d3752024",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 27,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "100\n",
+            "200\n",
+            "300\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
         "#@markdown 💊 **Compare between print(dictionary['a']) & print(['a']) to print a value, not a key.**\n",
         "\n",
         "print(dict2['a'])\n",
@@ -610,12 +979,12 @@
       ],
       "metadata": {
         "id": "PicaMEUyLEBw",
-        "outputId": "312e9a20-d30f-45f1-d5fc-51d92006220d",
+        "outputId": "c6ad571a-b5c9-459c-94b4-026c10f3cab6",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": null,
+      "execution_count": 28,
       "outputs": [
         {
           "output_type": "stream",
