Colab을 통해 생성됨

--- a/4_2_ForStatement.ipynb
+++ b/4_2_ForStatement.ipynb
@@ -94,7 +94,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -128,7 +128,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -231,7 +231,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -387,7 +387,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 10,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -498,7 +498,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 18,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -671,7 +671,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 19,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -732,7 +732,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 22,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -764,7 +764,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 23,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -818,7 +818,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 24,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -873,7 +873,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 25,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -889,9 +889,9 @@
     {
       "cell_type": "code",
       "source": [
-        "dict2 = {'a':100, 'b':200, 'c':300}\n",
+        "dict1 = {'a':100, 'b':200, 'c':300}\n",
         "\n",
-        "for i in dict2:\n",
+        "for i in dict1:\n",
         "  print(i)"
       ],
       "metadata": {
@@ -899,9 +899,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "tR_8K-_UNYX2",
-        "outputId": "34dd54b2-43f8-4a88-e5dd-1077f47ebfc9"
+        "outputId": "5760598b-af80-4a8a-a2ca-9ef1d8849152"
       },
-      "execution_count": null,
+      "execution_count": 1,
       "outputs": [
         {
           "output_type": "stream",
@@ -929,7 +929,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 26,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -956,7 +956,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 27,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -974,17 +974,17 @@
       "source": [
         "#@markdown 💊 **Compare between print(dictionary['a']) & print(['a']) to print a value, not a key.**\n",
         "\n",
-        "print(dict2['a'])\n",
+        "print(dict1['a'])\n",
         "print(['a'])"
       ],
       "metadata": {
         "id": "PicaMEUyLEBw",
-        "outputId": "c6ad571a-b5c9-459c-94b4-026c10f3cab6",
+        "outputId": "3dbba01c-16f5-4267-be94-8f3e571543cd",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 28,
+      "execution_count": 2,
       "outputs": [
         {
           "output_type": "stream",
@@ -1094,6 +1094,38 @@
         }
       },
       "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "1\n",
+            "2\n",
+            "3\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "scope=[1,2,3,4,5]\n",
+        "\n",
+        "for i in scope:\n",
+        "  print(i)\n",
+        "  if i < 3:\n",
+        "    continue\n",
+        "  else:\n",
+        "    break"
+      ],
+      "metadata": {
+        "id": "f50IujQZHHue",
+        "outputId": "b8625027-fb99-4186-d85b-716cf56e9f68",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 3,
       "outputs": [
         {
           "output_type": "stream",
